@@ -10,6 +10,7 @@ DIST grsecurity-sources-extras-4.9.52.tar.xz 2602456 SHA256 5b8074d5bfc88f5aee86
 DIST grsecurity-sources-extras-4.9.53.tar.xz 2618408 SHA256 e75f863db4c2d592f64f6352b2294105116e29fa4707c50d3ee595eae88b8a66 SHA512 3ef5cf91cf7cb7a30680e5db935479b0f78a93e42dfb0041a9840561735d3b464bb1b2e6428c5994e17553833126b396a4f74c7d0147fca95488ee7d40483281 WHIRLPOOL 4067cf935789dbc392de9668b418c08b7602f3e518c46b1423114be9ead189b86f2e505aad485a48b0300af64b80ed615446a825b60ef0db4c3a11605caac0d1
 DIST grsecurity-sources-extras-4.9.54.tar.xz 2646488 SHA256 b30ec3a3acc1affcc1193535b5ceb0d76ab52318c31848a1b7b710721e7e8bd3 SHA512 f0d34c55df0826d1609e85bdf3e5a0134b86dbfbb97e6f96b9f49fb7d091b9b95f11f3c17007d541cd96bb2d0dcfd527eb9c319f2aef039e0350e6de2e629a79 WHIRLPOOL 491713baf62e6305bc7da94647f68f8d92cd508eaa7172d79f4587902f4f660b97785a460758697b03fcf3863e9369fd9932daa9745aea6335440a1ac3e61313
 DIST grsecurity-sources-extras-4.9.56.tar.xz 2672508 SHA256 04e05202014f3b29a67489df81c81317d39d5a4cf6f54cece8ee22c9cd655ef1 SHA512 14d954c8318d4bd35a265555d081a620bda2d3a5244eeef7bf150267e03ecd7acc5da7fb20673c4535d5363691fe2a9015616a5a440e43c0ff5824b5ca8fc05c WHIRLPOOL 6d1e7320927202f2b257b7017315768220e35558cc70072c666f1b0ecf7d5ff91460695629fb6ff4df30bcebbe56ea6b2f6a63d8945999798b442fd6785b9271
+DIST grsecurity-sources-extras-4.9.58.tar.xz 2692352 SHA256 6e523d29a005066ebbbff6b0c2b5db65513b006e20974f0f9021e6f2e6eac054 SHA512 506b850720850d87d49927e9e0c568804d6ea1043b0fc6c171e11eadf4344a8269e8da75d2061fef92fc8c7bc976f3f6f9af3c225a952ce0e8f3c94239a5854a WHIRLPOOL 70bd5fb93f2a07c68c5a93f2eaacb79bb0aad6bf2ac1140b51408cd91441d157dbcc17791f34529e01f03664aee987fc05d9f59a18f91e3f2b8d93623e29c574
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
@@ -20,21 +21,22 @@ EBUILD grsecurity-sources-4.9.52.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8
 EBUILD grsecurity-sources-4.9.53.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.54.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.56.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 1921 SHA256 a0de69fdb7d2fb7c2433c4f64504609eb1d42cbf4b96f23f58292f7a7b60223d SHA512 1e44cf6917836dfab8e966cf5d19284ee71fdaa08b1bd314245038065b79a866a0bb75e69363e3595a34b91f933e1a1596c59b0e6eda779129181e2b3719df2f WHIRLPOOL ba24d9f13000ae20cce222726057d2d89eb62f74c4e5bb845d28fa921037e844f21a64b2d128af33d6191e7c1fa1e52d8e23f08503cc13522d0e53ee7a099473
+EBUILD grsecurity-sources-4.9.58.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 2116 SHA256 7dac867b300f8018f34c51e7f4edbf1809b3f40883cc38307220bd8084b3f31f SHA512 e6feb321cd33acc7b8eb1959f135d0cdfd4c0c4752c4e7db12f21bd20f54229c1e515b9ffa3f99554b5312262aadf746f1ce9ded46a4250352eff113c27eb658 WHIRLPOOL 9c8c6c096419bd0624f5e16ee013e8d342de04fe3aec10b0ce77ddf9daf68c4a196341cc3055425f1e3079cdaef73a32a6712a630f989c96a12e4a1b228cb6b6
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlngbOUACgkQunvTUHGU
-RZ+OSRAAo4aKvguim7KovD/vYYa6jhUmgyQWfTuvGiTWxYfoQnSFhtKyQ8MvtJn7
-TG8TFZiN14F63dd9H7qSiqiQdwnow/3sHD1wzxjxolnZto0CASkFEhwas9HK6lpO
-Er2v+O24DZLoSsC9rEN3oogTsp2MONWuuhUXRF8vUcAN7JgDKPZY5zJlPru3a/Zg
-RbsctgBWoHuQlfoeF1PiYeWH7Oq7y1FCWQeLyRZ2xBobEL8xrVPqx1DizdOy9ooP
-yKH6qyglRCnnC753XPAmWOR2QN2CIsOfDE6vXYbe1jW3YrTY5WU+J/5VYAkMPLBh
-PGSnUzhBuEqs6e+nBw3U0dVKdPrIoitxnKluA4HnWnFSBkkpc5BbxyvKQjrRptoZ
-VsuRRLlPXgyHcFlLTqQoQGvAPslCs+u+YgAF+RqBg3uMkb4sxq2cJ1ajeeKhrGTR
-V68Z/nermbsky18LZaMRkwYfkfvyh22T8JzzOnnw+/64PKaDU2OECbCFFcrFrj9M
-ZyZIOcHoCCswUmP8zmyIFzDLDs/z3Q63oBdUBV+KwV00ua/sNoAmgDZaSXjn01xL
-1pqvu/Se9UjZIB37DcYREOXcAp4MNb3GkGFxW5Q/yabKo3CGolxhhnf4Z+d/OY2A
-zb4CLzlDut2XMGPDcaZRhSQGlvKvSEL02GB3j6RGfa4mI4ol0mU=
-=7HWQ
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlntoaQACgkQunvTUHGU
+RZ+Ykg//bI2lcswDtVujaYTfBkLFtho96VqR+qYxln+1WduTwYLCV/QGKdOSIyOc
+xNv/aqqxBQAuUxrzeUcjOMcFJrIgJm5NiWs9sLgeHKxnsxpTnJEbfpZCEbJTXyT3
+FhL7aj1W6T5REHSPkAE69IsQrGF7qVVvCJ/Qo5asDQA0JMaXTsi05GqUkwCJOA2o
+9h+rQwj7O9V7TYBC3OI3hQksKK6kI5ZxPnXYFQLDV5pWoUMINopMvMWP13MyGLMl
+CN38e7W4crRT432v/sOZzNcUuaww9vaOkVlUfDlMdQqV/CDIKMEiqF77Gf3Kxh/M
+lc6rvKqrctW76M38XEYA+URUK85nxr3Po0vdBT7xqc7tapOLvYWDt0sdcNKKg4Ql
+afPNk699fHQlR3KIncDMez6NEblhPBKlF1gH5DOY7eJqF+ejgDlRmJUVuD3Fkv2F
+l+Kf5M2VGlEMXFRLLwQ/lxk4sww722Wa5tNHL5LvvH4VJfrdScf9g+SdGx8fN3i7
+XPIh9fSySfBeGPR0C70AiuxKvO/ImSCk1bgkYmTO4v7XCbbGZgZ2VHKH1JDN1f1j
+oUXl2HZJMyFZ5TwFB9wcUKiHoazacR3OrdVBKCEbzTWtszdABFtZBUvMtmNFjGiI
+huGBjV99Hm7gN0Aqtt3eIO0b3aKehaRhMloYQQ4pJoFQDZerS4A=
+=C75U
 -----END PGP SIGNATURE-----
